--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -6,8 +6,15 @@ services:
     image: bladex/sentinel-dashboard:1.8.6
     restart: on-failure
     ports:
-      - 8858:8858
-
+      - "8858:8858"
+  nacos:
+    image: nacos/nacos-server:v2.2.0
+    environment:
+      - PREFER_HOST_MODE=hostname
+      - MODE=standalone
+    ports:
+      - "8848:8848"
+      - "9848:9848"
 
   elasticsearch:
     restart: on-failure
