--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -18,11 +18,11 @@ services:
 
   elasticsearch:
     restart: on-failure
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.5.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.15.2
     container_name: elasticsearch
     hostname: elasticsearch
-    network_mode: host
-    privileged: true
+#    network_mode: host
+#    privileged: true
     ulimits:
       memlock:
         soft: -1
@@ -36,15 +36,15 @@ services:
     ports:
       - "9200:9200"
       - "9300:9300"
-    volumes:
-      - "./deploy/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml"
+#    volumes:
+#      - "./deploy/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml"
 #      - "/opt/config/es/plugins:/usr/share/elasticsearch/plugins:rw"
 #      - "/opt/data/es/data:/usr/share/elasticsearch/data:rw"
 
   kibana:
     restart: always
     container_name: kibana
-    image: docker.elastic.co/kibana/kibana:8.5.0
+    image: docker.elastic.co/kibana/kibana:8.15.0
     network_mode: host
     environment:
       - XPACK_MONITORING_COLLECTION_ENABLED="true"
@@ -54,7 +54,7 @@ services:
       - "./deploy/config/kibana.yml:/usr/share/kibana/config"
 
   logstash:
-    image: docker.elastic.co/logstash/logstash:8.5.0
+    image: docker.elastic.co/logstash/logstash:8.15.0
     container_name: logstash
     network_mode: host
     ports:
