--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
         <module>sky-product</module>
         <module>sky-clients</module>
         <module>sky-clients/sky-user-client</module>
+        <module>sky-elasticsearch</module>
+        <module>sky-mongodb</module>
+        <module>sky-redisson</module>
+        <module>sky-test</module>
     </modules>
 
     <properties>
@@ -31,6 +35,7 @@
         <rocketmq-client-java-version>5.0.7</rocketmq-client-java-version>
         <protoc.version>3.21.12</protoc.version>
         <grpc.version>1.54.1</grpc.version>
+<!--        <elasticsearch-java.version>8.15.0</elasticsearch-java.version>-->
     </properties>
 
 
@@ -80,6 +85,18 @@
                 <groupId>org.apache.rocketmq</groupId>
                 <artifactId>rocketmq-client-java</artifactId>
                 <version>${rocketmq-client-java-version}</version>
+            </dependency>
+
+            <!--<dependency>
+                <groupId>co.elastic.clients</groupId>
+                <artifactId>elasticsearch-java</artifactId>
+                <version>${elasticsearch-java.version}</version>
+            </dependency>-->
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>2.0.52</version>
             </dependency>
 
         </dependencies>
