feat: google 图片认证

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>sky-mongodb</module>
         <module>sky-redisson</module>
         <module>sky-test</module>
+        <module>sky-captcha</module>
     </modules>
 
     <properties>
